<resources>
    <string name="app_name">SafeMountain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Login Required</string>
    <string name="nav_header_subtitle">Connect to my server</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_mountain">MOUNTAIN</string>
    <string name="menu_activate">ACTIVATE</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_restore">RESTORE</string>

    <string name="settings_mobile_data">Allow Mobile Data Usage</string>
    <string name="settings_server_connection">Configure Server Connection</string>
    <string name="settings_restore_data">Restore Data</string>

    <string name="noti_channel_id_observer">s5a8f8e2m6o9u7n4tain</string>
    <string name="noti_channel_id_restore">s9a5f0e2m0o4untain</string>
</resources>
