<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sovworks.safemountain.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_MountainFragment"
            app:destination="@id/nav_mountain" />
    </fragment>

    <fragment
        android:id="@+id/nav_mountain"
        android:name="com.sovworks.safemountain.ui.mountain.MountainFragment"
        android:label="@string/menu_mountain"
        tools:layout="@layout/fragment_mountain">
        <action
            android:id="@+id/action_MountainFragment_to_HomeFragment"
            app:destination="@id/nav_home" />
        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_activate"
        android:name="com.sovworks.safemountain.ui.activate.ActivateFragment"
        android:label="@string/menu_activate"
        tools:layout="@layout/fragment_activate" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.sovworks.safemountain.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>